WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193215
Cannot scroll for 5 seconds after swiping back on quoteunquoteapps.com
https://bugs.webkit.org/show_bug.cgi?id=193215
Summary
Cannot scroll for 5 seconds after swiping back on quoteunquoteapps.com
Chris Dumez
Reported
2019-01-07 14:30:07 PST
Cannot scoll for 5 seconds after swiping back on quoteunquoteapps.com because the gesture snapshot is not promptly taken down.
Attachments
Patch
(7.51 KB, patch)
2019-01-07 15:09 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(8.87 KB, patch)
2019-01-07 15:50 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(29.15 MB, application/zip)
2019-01-07 18:37 PST
,
EWS Watchlist
no flags
Details
Patch
(8.27 KB, patch)
2019-01-07 19:49 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-01-07 14:30:33 PST
<
rdar://problem/45108222
>
Radar WebKit Bug Importer
Comment 2
2019-01-07 14:31:00 PST
<
rdar://problem/47096652
>
Chris Dumez
Comment 3
2019-01-07 15:09:09 PST
Created
attachment 358536
[details]
Patch
EWS Watchlist
Comment 4
2019-01-07 15:14:42 PST
Attachment 358536
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:293: 'webPageProxyForBackForwardListForCurrentSwipe' is incorrectly named. It should be named 'protector' or 'protectedWebPageProxyForBackForwardListForCurrentSwipe'. [readability/naming/protected] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 5
2019-01-07 15:38:46 PST
Comment on
attachment 358536
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358536&action=review
> Source/WebKit/Shared/WebBackForwardListItem.cpp:147 > + // The following logic must be kept in sync with WebCore::HistoryItem::itemsAreClones().
HistoryItem::itemsAreClones() doesn't have any such comment so this seems guaranteed to bit-rot.
Chris Dumez
Comment 6
2019-01-07 15:50:39 PST
Created
attachment 358547
[details]
Patch
EWS Watchlist
Comment 7
2019-01-07 15:53:34 PST
Attachment 358547
[details]
did not pass style-queue: ERROR: Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:293: 'webPageProxyForBackForwardListForCurrentSwipe' is incorrectly named. It should be named 'protector' or 'protectedWebPageProxyForBackForwardListForCurrentSwipe'. [readability/naming/protected] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 8
2019-01-07 18:02:08 PST
Comment on
attachment 358547
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=358547&action=review
> Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:291 > + if (areItemsClones) {
Why isn't this down after we do all the "good path" things, and just do removeSwipeSnapshot() and return in this block, like the !m_webPageProxy.drawingArea() case?
EWS Watchlist
Comment 9
2019-01-07 18:37:44 PST
Comment on
attachment 358547
[details]
Patch
Attachment 358547
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10665131
New failing tests: media/video-zoom.html
EWS Watchlist
Comment 10
2019-01-07 18:37:46 PST
Created
attachment 358563
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Chris Dumez
Comment 11
2019-01-07 19:49:40 PST
Created
attachment 358567
[details]
Patch
WebKit Commit Bot
Comment 12
2019-01-07 20:27:11 PST
Comment on
attachment 358567
[details]
Patch Clearing flags on attachment: 358567 Committed
r239720
: <
https://trac.webkit.org/changeset/239720
>
WebKit Commit Bot
Comment 13
2019-01-07 20:27:13 PST
All reviewed patches have been landed. Closing bug.
Michael Bailey
Comment 14
2019-01-24 08:29:35 PST
I wonder if something similar is happening on GitHub.com pages. For example, go to
https://github.com/WebKit/webkit
, click on any of the files or folders in the source browser, and then swipe to go back. When I do this, I can't interact with the page for several seconds after swiping to go back. I can interact with the page immediately if I use the back button. However, I tried with STP release 74, and I still see the same issue, so there may be a different cause.
Simon Fraser (smfr)
Comment 15
2019-01-24 11:02:31 PST
You're right, there's still an issue on Github pages.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug