Source/WebCore/loader/HistoryController.cpp
@@ -766,6 +766,7 @@ void HistoryController::recursiveGoToItem(HistoryItem& item, HistoryItem* fromIt
     }
 }
 
+// The following logic must be kept in sync with WebKit::WebBackForwardListItem::itemIsClone().
 bool HistoryController::itemsAreClones(HistoryItem& item1, HistoryItem* item2) const
 {
     // If the item we're going to is a clone of the item we're at, then we do
